--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Portfolio Project</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
+    <!--Main page body -->
+    <article class="content">
+      <!--Page header-->
+      <header class="page-header">
+        <!--Main icon -->
+        <img src="icon.png" alt="Portfolio Logo" class="header-logo">
+        <h1 class="page-title">Jane Doette</h1>
+        <h4 class="page-subtitle">Front-end Ninja</h4>
+      </header>
+    </article>
   </body>
 </html>
