feat: add main section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <h1 class="page-title">Jane Doette</h1>
         <h4 class="page-subtitle">Front-end Ninja</h4>
       </header>
+      <section class="main-figure">
+        <figure class="main-figure-hero"></figure>
+      </section>
     </article>
   </body>
 </html>
