feat: add the 3 squares with colors

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
       <section class="main-figure">
         <figure class="main-figure-hero"></figure>
       </section>
+      <!--The container for the 3 squares for colors and hex code-->
+      <aside class="color-square-container">
+        <div class="color-squares">
+          <div class="color-square"></div>
+          <div class="color-square"></div>
+          <div class="color-square"></div>
+        </div>
+        <div class="color-square-captions">
+          <div class="color-square-caption">F8981C</div>
+          <div class="color-square-caption">BCBBBB</div>
+          <div class="color-square-caption">747704</div>
+        </div>
+      </aside>
     </article>
   </body>
 </html>
