feat: add featured work

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <!--The container for the 3 squares for colors and hex code-->
       <aside class="color-square-container">
         <div class="color-squares">
+          <!--Empty divs for the colors-->
           <div class="color-square"></div>
           <div class="color-square"></div>
           <div class="color-square"></div>
@@ -33,6 +34,27 @@
           <div class="color-square-caption">747704</div>
         </div>
       </aside>
+      <!--Featured work-->
+      <section class="featured-work-container">
+        <h2 class="featured-item-title">Featured Work</h2>
+        <!--Each featured item-->
+        <div class="featured-item">
+          <!--The image-->
+          <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
+          <h3 class="featured-item-heading">Item 1</h3>
+          <a href="#" class="featured-item-link">Insert URL here </a>
+        </div>
+        <div class="featured-item">
+          <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
+          <h3 class="featured-item-heading">Item 2</h3>
+          <a href="#" class="featured-item-link">Insert URL here </a>
+        </div>
+        <div class="featured-item">
+          <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
+          <h3 class="featured-item-heading">Item 3</h3>
+          <a href="#" class="featured-item-link">Insert URL here </a>
+        </div>
+      </section>
     </article>
   </body>
 </html>
