Feat: finish up responsive elements

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section class="featured-work-container">
         <h2 class="featured-item-title">Featured Work</h2>
         <!--Each featured item-->
-        <div class="featured-item">
+        <div class="featured-item offset-padding">
           <!--The image-->
           <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
           <h3 class="featured-item-heading">Item 1</h3>
