style: fix alignment

--- a/index.html
+++ b/index.html
@@ -37,22 +37,27 @@
       <!--Featured work-->
       <section class="featured-work-container">
         <h2 class="featured-item-title">Featured Work</h2>
-        <!--Each featured item-->
-        <div class="featured-item offset-padding">
-          <!--The image-->
-          <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
-          <h3 class="featured-item-heading">Item 1</h3>
-          <a href="#" class="featured-item-link">Insert URL here</a>
-        </div>
-        <div class="featured-item">
-          <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
-          <h3 class="featured-item-heading">Item 2</h3>
-          <a href="#" class="featured-item-link">Insert URL here</a>
-        </div>
-        <div class="featured-item">
-          <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
-          <h3 class="featured-item-heading">Item 3</h3>
-          <a href="#" class="featured-item-link">Insert URL here</a>
+        <div class="featured-items-container">
+
+
+          <!--Each featured item-->
+          <div class="featured-item">
+            <!--The image-->
+            <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
+            <h3 class="featured-item-heading">Item 1</h3>
+            <a href="#" class="featured-item-link">Insert URL here</a>
+          </div>
+          <div class="featured-item">
+            <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
+            <h3 class="featured-item-heading">Item 2</h3>
+            <a href="#" class="featured-item-link">Insert URL here</a>
+          </div>
+          <div class="featured-item">
+            <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
+            <h3 class="featured-item-heading">Item 3</h3>
+            <a href="#" class="featured-item-link">Insert URL here</a>
+          </div>
+
         </div>
       </section>
     </article>
