feat: add randomly chosen images

--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
           <!--Each featured item-->
           <div class="featured-item">
             <!--The image-->
-            <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
+            <img src="http://upload.wikimedia.org/wikipedia/commons/2/27/Qatar_Airways_Airbus_A350_on_finals_on_its_first_flight_to_London_Heathrow_Airport_%283%29.jpg" alt="Placeholder Image" class="featured-item-img">
             <h3 class="featured-item-heading">Item 1</h3>
             <a href="#" class="featured-item-link">Insert URL here</a>
           </div>
           <div class="featured-item">
-            <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
+            <img src="http://upload.wikimedia.org/wikipedia/commons/1/18/Boeing_747-8_N747EX_First_Flight.jpg" alt="Placeholder Image" class="featured-item-img">
             <h3 class="featured-item-heading">Item 2</h3>
             <a href="#" class="featured-item-link">Insert URL here</a>
           </div>
           <div class="featured-item">
-            <img src="placeholder.png" alt="Placeholder Image" class="featured-item-img">
+            <img src="http://upload.wikimedia.org/wikipedia/commons/f/fd/Ryanair_Boeing_737_%28EI-ENI%29_departs_Bristol_Airport_23September2014_arp.jpg" alt="Placeholder Image" class="featured-item-img">
             <h3 class="featured-item-heading">Item 3</h3>
             <a href="#" class="featured-item-link">Insert URL here</a>
           </div>
