--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="page-header">
         <!--Main icon -->
         <img src="icon.png" alt="Portfolio Logo" class="header-logo">
-        <h1 class="page-title">Jane Doette</h1>
+        <h1 class="page-title">Da Shroom</h1>
         <h4 class="page-subtitle">Front-end Ninja</h4>
       </header>
       <section class="main-figure">
@@ -44,17 +44,17 @@
           <div class="featured-item">
             <!--The image-->
             <img src="/images/FW-1.jpg" alt="Placeholder Image" class="featured-item-img">
-            <h3 class="featured-item-heading">Item 1</h3>
+            <h3 class="featured-item-heading">Airbus A350-900</h3>
             <a href="#" class="featured-item-link">Insert URL here</a>
           </div>
           <div class="featured-item">
             <img src="/images/FW-2.jpg" alt="Placeholder Image" class="featured-item-img">
-            <h3 class="featured-item-heading">Item 2</h3>
+            <h3 class="featured-item-heading">Boeing 747-8I</h3>
             <a href="#" class="featured-item-link">Insert URL here</a>
           </div>
           <div class="featured-item">
             <img src="/images/FW-3.jpg" alt="Placeholder Image" class="featured-item-img">
-            <h3 class="featured-item-heading">Item 3</h3>
+            <h3 class="featured-item-heading">Boeing 737-800</h3>
             <a href="#" class="featured-item-link">Insert URL here</a>
           </div>
 
